# winkr

./: .clinerules  .gitignore  AGENTS.md  README.md  implementation_plan.  implementation_plan.md  pyproject.toml
.winkr/: config.json  task001_description.md  task002_description.md  task003_description.md
Let's craft them.src/llm_agent_toolkit/: git_setup.py
benchmark_results/: benchmark-001.md
rules/: clinerules.base.md
scripts/: benchmark.sh  cline.sh  depwire.sh  enforcer-hook.sh  install_aider.sh  install_cline.sh  install_hooks.sh  winkr_reinstall.sh
src/llm_agent_toolkit/: __init__.py  aider.py  benchmark.py  cli.py  commands.py  config.py  config_manager.py  credentials.py  enforcer.py  git_safety.py  git_setup.py  init_command.py  logging_utils.py  rules.py
src/llm_agent_toolkit/rules/: clinerules.base.md  rules.base.md
tests/: test_aider.py  test_architect.py  test_benchmark.py  test_cli.py  test_config_manager.py  test_credentials.py  test_enforcer.py  test_rules.py
