[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winkr"
version = "0.1.0"
description = "Reusable LLM agent workflow toolkit for Aider, Cline, and model-tier orchestration."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "winkr contributors" }
]
keywords = ["llm", "aider", "cline", "agents", "openrouter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
winkr = "llm_agent_toolkit.cli:main"
winkr-query = "llm_agent_toolkit.cli:query_main"
winkr-edit  = "llm_agent_toolkit.cli:edit_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_agent_toolkit = ["rules/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

